# anax

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGE_LOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE.txt  README.md  bugs.md  clean.sh  install.sh  lisense.txt  readme.md  roadmap.md
cmake/Modules/: Findanax.cmake
doc/: Doxyfile  Doxyfile.in
examples/: CMakeLists.txt  Movement.cpp  README.md  recurse_find.sh  simple_example.cpp
examples/1 Rendering/: .main.cpp.swp  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
examples/2 Animation/: Game.cpp  Game.hpp  README.md  main.cpp
examples/3 Movement/: BodyComponent.hpp  Game.cpp  Game.hpp  PlayerComponent.hpp  PlayerInputSystem.cpp  PlayerInputSystem.hpp  README.md  main.cpp
examples/4 Collision/: Game.cpp  Game.hpp  PlayerComponent.hpp  PlayerInputSystem.cpp  PlayerInputSystem.hpp  main.cpp
examples/4coll/: .Game.cpp.swp  .PlayerInputSystem.cpp.swp  .main.cpp.swp  Game.cpp  Game.hpp  PlayerInputSystem.hpp  main.cpp
examples/Pong/: README.md
examples/Pong/src/: PongGame.cpp  PongGame.hpp  main.cpp
examples/Pong/src/Components/: AIComponent.hpp  BallComponent.hpp  PaddleComponent.hpp  PlayerComponent.hpp  ScoreComponent.hpp
examples/Pong/src/Systems/: AISystem.cpp  AISystem.hpp  PlayerControllerSystem.cpp  PlayerControllerSystem.hpp
examples/Pong/temp/project/Pong/Pong/: Pong.1  main.cpp
examples/Pong/temp/project/Pong/Pong.xcodeproj/: project.pbxproj
examples/Pong/temp/project/Pong/Pong.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/Pong/temp/project/Pong/Pong.xcodeproj/project.xcworkspace/xcuserdata/miguel.xcuserdatad/: UserInterfaceState.xcuserstate
examples/Pong/temp/project/Pong/Pong.xcodeproj/xcuserdata/miguel.xcuserdatad/xcschemes/: Pong.xcscheme  xcschememanagement.plist
examples/common/: CMakeCache.txt  CMakeLists.txt  README.md
examples/common/include/: BaseGame.hpp  EntityTagger.hpp  RunGame.hpp
examples/common/include/Components/: .AnimationComponent.hpp.swp  .CollisionComponent.hpp.swp  .TransformComponent.hpp.swp  AnimationComponent.hpp  CollisionComponent.hpp  PlayerComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
examples/common/include/Systems/: .CollisionSystem.hpp.swp  .PlayerInputSystem.hpp.swp  AnimationSystem.hpp  CollisionSystem.hpp  MovementSystem.hpp  PlayerInputSystem.hpp  SpriteRenderingSystem.hpp
examples/common/src/Components/: AnimationComponent.cpp
examples/common/src/Systems/: .CollisionSystem.cpp.swp  .MovementSystem.cpp.swp  AnimationSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  PlayerInputSystem.cpp  SpriteRenderingSystem.cpp
examples/resources/meta/: playerSpriteSheetFrames.txt
examples/temp/project/Example1/Example1/: Example1.1
examples/temp/project/Example1/Example1.xcodeproj/: project.pbxproj
include/anax/: .ComponentFilter.hpp.swp  .World.hpp.swp  Component.cpp  Component.h  Component.hpp  ComponentFilter.cpp  ComponentFilter.h  ComponentFilter.hpp  ComponentStorage.h  ComponentTypeList.hpp  Config.hpp.inl  Entity.cpp  Entity.h  Entity.hpp  EntityContainer.h  EntityFactory.h  EntityProcessingSystem.h  EntitySystem.h  EntitySystemContainer.h  FilterOptions.hpp  Identifiable.h  IdentifiableArray.h  IdentifierPool.h  ObjectCreator.h  System.cpp  System.h  System.hpp  Types.h  World.cpp  World.h  World.hpp  anax.h  anax.hpp  config.h  config.hpp  config.hpp.inl  rtti.h  types.h  types.hpp
include/anax/detail/: AnaxAssert.hpp  BaseComponent.hpp  BaseSystem.hpp  ClassTypeId.hpp  ComponentTypeList.hpp  Config.hpp  Config.hpp.inl  ContainerUtils.hpp  EntityAttributes.hpp  EntityComponentStorage.hpp  EntityIdPool.hpp  Filter.hpp
include/anax/util/: ContainerUtils.hpp  DynamicArrayUtils.h  DynamicArrayUtils.hpp
project/Xcode/anax.xcodeproj/: project.pbxproj
project/Xcode/anax.xcodeproj/project.xcworkspace/xcuserdata/miguel.xcuserdatad/: UserInterfaceState.xcuserstate
project/Xcode/anax/anax.xcodeproj/: project.pbxproj
project/Xcode/anax/anax.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/Xcode/anax/anax.xcodeproj/project.xcworkspace/xcuserdata/miguel.xcuserdatad/: UserInterfaceState.xcuserstate
project/Xcode/anax/anax.xcodeproj/xcuserdata/miguel.xcuserdatad/xcschemes/: anax.xcscheme  xcschememanagement.plist
projects/Xcode 4/anax.xcodeproj/: project.pbxproj
projects/Xcode 4/anax.xcodeproj/project.xcworkspace/xcuserdata/miguel.xcuserdatad/: UserInterfaceState.xcuserstate
projects/Xcode 4/anax.xcodeproj/xcuserdata/miguel.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
projects/Xcode 4/tests/tests/: main.cpp  tests.1
projects/Xcode 4/tests/tests.xcodeproj/: project.pbxproj
projects/Xcode 4/tests/tests.xcodeproj/xcuserdata/miguel.xcuserdatad/xcschemes/: tests.xcscheme  xcschememanagement.plist
src/anax/: Component.cpp  ComponentFilter.cpp  ComponentStorage.cpp  Entity.cpp  EntityContainer.cpp  EntityFactory.cpp  EntitySystem.cpp  System.cpp  World.cpp
src/anax/detail/: BaseSystem.cpp  EntityComponentStorage.cpp  EntityIdPool.cpp  EntiyAttributes.cpp  Filter.cpp
tests/: CMakeLists.txt  Components.hpp  Systems.hpp  Test_ClassTypeId.cpp  Test_ComponentFilter.cpp  Test_Entities.cpp  Test_Systems.cpp  lest.hpp
